--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,18 @@
 # H2 database is default when datasource url is empty
-spring.datasource.url=
+
+# Database
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+
+# Database Connection
+
+#spring.datasource.url=${JDBC_URL:}
+#spring.datasource.username=${JDBC_USER}
+#spring.datasource.password=${JDBC_PASS}
+#server.port=8080
+
+server.error.include-stacktrace=always
+server.error.include-message=always
+
+spring.jackson.serialization.write-date-keys-as-timestamps=false
+spring.jackson.serialization.indent-output=true
