Enable gzip compression

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,10 @@
 # H2 database is default when datasource url is empty
 
-# Database
+# Database Debugging
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 
 # Database Connection
-
 #spring.datasource.url=${JDBC_URL:}
 #spring.datasource.username=${JDBC_USER}
 #spring.datasource.password=${JDBC_PASS}
@@ -14,5 +13,10 @@ spring.jpa.show-sql=true
 server.error.include-stacktrace=always
 server.error.include-message=always
 
+# This enables data compression when sending responses.
+# Works by default on text/html, text/xml, text/plain, text/css, text/javascript, application/javascript, application/json, application/xml
+server.compression.enabled=true
+
+# Make JSON pretty before sending it
 spring.jackson.serialization.write-date-keys-as-timestamps=false
 spring.jackson.serialization.indent-output=true
