--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,9 @@ server.compression.enabled=true
 # Make JSON pretty before sending it
 spring.jackson.serialization.write-date-keys-as-timestamps=false
 spring.jackson.serialization.indent-output=true
+
+# Springdoc
+# This is what enables the Swagger UI API documentation
+springdoc.packages-to-scan=com.example.backend.api
+springdoc.paths-to-match=/api/**
+springdoc.api-docs.groups.enabled=true
